# Lucid_Somnambulist

./: .gitignore  LICENSE  README.md  buffer.mol2  install.sh
Lucid_Somnambulist/: LICENSE  README.md  pyproject.toml  setup.py  somn-docker.yml  somn.yml  somn_dev.yml
Lucid_Somnambulist/somn/: __init__.py  __main__.py  setup.py
Lucid_Somnambulist/somn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Lucid_Somnambulist/somn/_core/: _core.py
Lucid_Somnambulist/somn/calculate/: RDF.py  __init__.py  catalyst_firstgen.py  descriptors.py  geom.py  new_reactant.py  newsub_props.py  preprocess.py  reactant_firstgen.py  substrate.py
Lucid_Somnambulist/somn/config/: __init__.py  config.py
Lucid_Somnambulist/somn/data/: __init__.py  adjusting.ipynb  amine_smiles.json  analysis_of_maxvar_vs_var.csv  bromide_smiles.json  cat_aso_aeif_combined.csv  catalyst_descriptors.feather  dataset_yields.hdf5  iso_catalyst_embedding.csv  projects.JSON  reagents.hdf5  scratch.ipynb
Lucid_Somnambulist/somn/data/depreciation/: base_params.csv  dataset.csv  (+1 more)
Lucid_Somnambulist/somn/database/: __init__.py  databasing.py  dtypes.py
Lucid_Somnambulist/somn/database_remove/: databasing.py  dtypes.py
Lucid_Somnambulist/somn/depict/: __init__.py  evaluate.py
Lucid_Somnambulist/somn/inference/: __init__.py  infer.py  inference.py
Lucid_Somnambulist/somn/learn/: __init__.py  cancelout.ipynb  inference.py  learning.py
Lucid_Somnambulist/somn/util/: __init__.py  aux_func.py  project.py  visualize.py
Lucid_Somnambulist/somn/workflows/: __init__.py  add.py  calculate.py  correlation.csv  firstgen_calc_cat.py  firstgen_calc_sub.py  learn.py  partition.py  predict.py  req.txt  scratch_code.txt  search.py  testing.csv  visualize.py
(+244 files in other folders)
