[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "N. Ian Rinehart", email = "i.rinehart4@gmail.com" }]
requires-python = ">=3.10"
name = "somn"
description = "Active learning multi-component chemical reaction spaces for substrate-adaptive yield prediction."
dependencies = [
    # "attrs==23.1.0",
    # "Pillow==9.3.0",
    # "PyYAML>=5.3",
    # "colorama>=0.4.4",
    # "attrs==23.1.0",
    # "tensorflow==2.12.0",
    # "keras-tuner==1.3.5",
    # "pandas==1.5.2",
    # "seaborn==0.12.2",
    # "scikit-learn==1.2.0",
    # "pyarrow==8.0.0",
    # "openbabel==3.1.1.1",
    # "ipykernel==6.15.0",
    # "scipy==1.4.1",
    # "rdkit==2023.03.1",
]
version = "0.1"

# [tool.setuptools.package-data]
# "molli.files" = ["*"]
# "molli.data" = ["*.yml"]

[tool.setuptools.packages.find]
include = ["somn", "somn.*"]

[project.scripts]
somn = "somn.__main__:main"
